scalars tests OK